# forum-spam-filter

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  pyproject.toml
.github/workflows/: release-rpc-binaries.yml  rpc-server-build.yml  rpc-server-release.yml
phpbb3_extension/proprietary/spamfilter/: README.md  composer.json  ext.php
phpbb3_extension/proprietary/spamfilter/config/: services.yml
phpbb3_extension/proprietary/spamfilter/event/: main_listener.php
phpbb3_extension/proprietary/spamfilter/language/en/: common.php
proto/: spam_classifier.proto
results/onnx_quantized/: model_quantized.onnx
src/: cli.rs  lib.rs  rpc.rs
src/forum_spam_filter/: __main__.py  clean_data.py  export_model.py  inference.py  model.py  preprocess_data.py  train.py
src/forum_spam_filter/clean_data/: __init__.py  csdmc2010.py  export_phpbb3_topic.py  private_dataset.py  spam_assassin.py  trec_public_corpus.py  util.py
src/forum_spam_filter/clean_data/datasets/: .gitignore
src/forum_spam_filter/clean_data/datasets/spamassassin-public-corpus/: 20021010_easy_ham.tar.bz2  20021010_hard_ham.tar.bz2  20021010_spam.tar.bz2  20030228_easy_ham.tar.bz2  20030228_easy_ham_2.tar.bz2  20030228_hard_ham.tar.bz2  20030228_spam.tar.bz2  20030228_spam_2.tar.bz2  20050311_spam_2.tar.bz2
tests/clean_data/: test_spam_assassin.py
tools/ansible/: README.md
tools/ansible/roles/forum_spam_filter/defaults/: main.yml
tools/ansible/roles/forum_spam_filter/files/: model_quantized.onnx
tools/ansible/roles/forum_spam_filter/tasks/: build.yml  install.yml  main.yml  php.yml  prebuilt.yml  prerequisites.yml
tools/ansible/roles/forum_spam_filter/templates/: forum-spam-filter.service.j2
tools/ansible/roles/forum_spam_filter/vars/: main.yml
