[package]
name = "forum-spam-filter"
authors = ["Zelly Snyder <zelcon@zelcon.net>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "rpc"
path = "src/rpc.rs"

[dependencies]
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.9", features = ["ndarray", "half", "load-dynamic"] }
prost = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
tokenizers = "0.21.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
#protobuf-src = "2.1.0"
tonic-build = "0.12.3"

# To use vendored libs:
# [source.crates-io]
# replace-with = "vendored-sources"

# [source.vendored-sources]
# directory = "vendor"


[target.aarch64-apple-darwin.dependencies.ort]
version = "2.0.0-rc.9"
features = ["coreml", "ndarray", "half", "load-dynamic"]

# [target.aarch64-unknown-linux-gnu.dependencies.ort]
# version = "2.0.0-rc.9"
# features = ["acl", "ndarray", "download-binaries", "half", "copy-dylibs"]